# skill-vs-mcp-benchmarks

./: .gitignore  AGENTS.md  AGENTS.md.agentBrowser  AGENTS.md.disabled  AGENTS.md.pinchtab  AGENTS.md.playwright  AGENTS.md.qmd  README.md  agent-browser.json  opencode.json.tui-migration.bak  package-lock.json  package.json  page-debug.html  pyproject.toml  qmdreadme.md  screenshot.js  skills-lock.json  test.jsonl  tsconfig.json  tsconfig.tsbuildinfo  watch-memory.ts
.opencode/: opencode.json
.opencode/agents/: chat-manager.md  judge.md
.opencode/plugins/: session-auto-export.ts
.opencode/skills/agent-browser/: SKILL.md
.opencode/skills/dialectic/: README.md  SKILL.md
.opencode/skills/docx/: SKILL.md
.opencode/skills/gws-calendar/: SKILL.md
.opencode/skills/gws-calendar-agenda/: SKILL.md
.opencode/skills/gws-calendar-insert/: SKILL.md
.opencode/tools/: README.md  chat-with-session.ts  read-frontmatter.ts
eval/: README.md  models.json  run-eval.ts  run-task-demo.ts
eval/tasks/: eval-config-file-management-skills.json  eval-config-file-management.json  eval-config-google-workspace.json  eval-config-hard.json
eval/visualization/: PLAN.md  README.md  config.py  generate_visualizations.py  requirements.txt  visual-config.json
memory/memory/: qmd.md  setup-summary.md  task-70-zip-code-steps.md  task-attack-on-titan.md  task-github-stars-check.md  task-wikipedia-python-infobox.md  test-entry.md
uploads/: contract_redlined.docx  deck_messy.pptx  dirty_data.csv  employee_data.xlsx  sales_data.xlsx
uploads/result_analysis/: COMP_FINAL_RESULT.xls
(+2491 files in other folders)
